--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
       <form action="/vigenere" method="get">
         <button class="button" type="submit">Try it!</button>
       </form>
-    </div>
+    </div><br>
 
     <div class="single-col" style="padding-top:10px">
       <p class="title2">Scytale Cipher</p>
